--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="contenedor">
-        <input type="text" class="titulo">
+        <input type="text" class="nombres" placeholder="TW:@leonardo_tata">
         <p class="contar" id="contar">0</p>
 
         <div class="botones">
@@ -23,7 +23,7 @@
 
 
     <div class="contenedor">
-        <input type="text" class="titulo">
+        <input type="text" class="nombres" placeholder="IG:leonardomtata">
         <p class="contar" id="contar2">0</p>
 
         <div class="botones">
